# Multiplayer-Game

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/shaders/frag/2D/: hdr.frag  hdr_w.frag  shape_lit.frag  shape_lit_w.frag  shape_unlit.frag  shape_unlit_w.frag  text.frag  text_w.frag  texture_lit.frag  texture_lit_w.frag  texture_unlit.frag  texture_unlit_w.frag
Client/shaders/vert/2D/: hdr.vert  hdr_w.vert  shape.vert  shape_w.vert  text.vert  text_w.vert  texture.vert  texture_w.vert
Client/src/: game.c  game.h  main.c  networking.c  networking.h
Server/: CMakeLists.txt
Server/src/: main.c  network.c  network.h
src/client/: client.c  client.h  main.c
src/server/: main.c  server.c  server.h
